@@ -60,16 +60,13 @@ my $builder = $class->new(
           'XML::LibXML'                  => 0,
 
           'npg_common::roles::log'                             => 0,
-          'npg_common::roles::run::lane::file_names'           => 0,
           'npg_common::roles::software_location'               => 0,         
           'npg_qc::autoqc::autoqc'                             => 0,
           'npg_qc::autoqc::qc_store'                           => 0,
           'npg_tracking::data::reference::find'                => 0,
           'npg_tracking::data::reference::list'                => 0,
           'npg_tracking::daemon'                               => 0,
-          'npg_tracking::glossary::lane'                       => 0,
           'npg_tracking::glossary::run'                        => 0,
-          'npg_tracking::glossary::tag'                        => 0,
           'npg_tracking::illumina::run::folder'                => 0,
           'npg_tracking::illumina::run::folder::validation'    => 0,
           'npg_tracking::illumina::run::long_info'             => 0,
